<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/color_square"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/seekBarR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarR"
        android:layout_width="201dp"
        android:layout_height="35dp"
        android:inputType="number"
        android:max="255"
        android:min="0"
        android:thumbTint="@color/red"
        android:progressTint="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/seekBarG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_square" />

    <TextView
        android:id="@+id/textViewR"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/R"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/textViewG"
        app:layout_constraintEnd_toStartOf="@id/seekBarR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_square" />

    <SeekBar
        android:id="@+id/seekBarG"
        android:layout_width="201dp"
        android:layout_height="35dp"
        android:inputType="number"
        android:max="255"
        android:min="0"
        android:thumbTint="@color/green"
        android:progressTint="@color/green"
        app:layout_constraintBottom_toTopOf="@id/seekBarB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarR" />

    <TextView
        android:id="@+id/textViewG"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/G"
        android:textAlignment="center"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@id/textViewB"
        app:layout_constraintEnd_toStartOf="@id/seekBarG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewR" />

    <SeekBar
        android:id="@+id/seekBarB"
        android:layout_width="201dp"
        android:layout_height="35dp"
        android:inputType="number"
        android:max="255"
        android:min="0"
        android:thumbTint="@color/blue"
        android:progressTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarG" />

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/B"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/seekBarB"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewG" />

</androidx.constraintlayout.widget.ConstraintLayout>